full image view clipping fix

--- a/codecreature.net/codefiles/full-image.css
+++ b/codecreature.net/codefiles/full-image.css
@@ -48,6 +48,7 @@
 		div:has(.image) {
 			min-height: 0;
 			flex-grow: 0;
+			flex-shrink: 0;
 			img {
 				max-width: 85vw;
 				max-height: 75vh;
@@ -63,7 +64,7 @@
 			
 			background: var(--background);
 			padding: .75em 1em 1em 1em;
-			margin-top: 1rem;
+			margin-top: .5rem;
 			border: var(--border);
 			
 			> * { max-width: 100%; }
